mkdocs-material-3.x.x (2019-xx-xx)

  * Removed Google Tag Manager and reverted to Google Analytics

mkdocs-material-3.3.0 (2019-01-29)

  * Moved Google Analytics integration into `head` using Google Tag Manager
  * Fixed #972: Unicode slugifier breaks table of contents blur on scroll
  * Fixed #974: Additional links in table of contents break blur on scroll

mkdocs-material-3.2.0 (2018-12-28)

  * Added support for redirects using metadata refresh
  * Fixed #921: Load Google Analytics snippet asynchronously

mkdocs-material-3.1.0 (2018-11-17)

  * Added support for Progressive Web App Manifest
  * Fixed #915: Search bug in Safari (upgraded Lunr.js)

mkdocs-material-3.0.6 (2018-10-26)

  * Added Taiwanese translations
  * Fixed #906: JavaScript code blocks evaluated in search results

mkdocs-material-3.0.5 (2018-10-23)

  * Added Croatian and Indonesian translations
  * Fixed #899: Skip-to-content link invalid from 2nd level on
  * Fixed #902: Missing URL filter in footer for FontAwesome link

mkdocs-material-3.0.4 (2018-09-03)

  * Updated Dutch translations
  * Fixed #856: Removed preconnect meta tag if Google Fonts are disabled

mkdocs-material-3.0.3 (2018-08-07)

  * Fixed #841: Additional path levels for extra CSS and JS

mkdocs-material-3.0.2 (2018-08-06)

  * Fixed #839: Lunr.js stemmer imports incorrect

mkdocs-material-3.0.1 (2018-08-05)

  * Fixed #838: Search result links incorrect

mkdocs-material-3.0.0 (2018-08-05)

  * Upgraded MkDocs to 1.0
  * Upgraded Python in official Docker image to 3.6
  * Added Serbian and Serbo-Croatian translations

mkdocs-material-2.9.4 (2018-07-29)

  * Fixed build error after MkDocs upgrade

mkdocs-material-2.9.3 (2018-07-29)

  * Added link to home for logo in drawer
  * Fixed dependency problems between MkDocs and Tornado

mkdocs-material-2.9.2 (2018-06-29)

  * Added Hindi and Czech translations

mkdocs-material-2.9.1 (2018-06-18)

  * Added support for different spellings for theme color